# ICPE25-artifacts

./: .gitignore  README.md  matplotlib-style.rc  pyproject.toml  snakefile
results/Amd-epyc/: slurm-881696.out  slurm-881697.out  slurm-881701.out  slurm-881704.out  slurm-881705.out  slurm-881707.out  slurm-881708.out  slurm-881710.out  slurm-881711.out  slurm-881712.out  slurm-881716.out  slurm-882383.out  slurm-882385.out  slurm-882386.out  slurm-882392.out  slurm-882395.out  slurm-882397.out  slurm-882398.out  slurm-882399.out  slurm-882400.out  slurm-882402.out  slurm-882406.out  slurm-882410.out  slurm-882413.out  (+35 more)
scripts/: .atomic-block-size.py.swp  .create_config.py.swp  .extrapolation.py.swp  .plot-all-systems.py.swp  .plot-roofline.py.swp  .plot-single-system-multi-bench.py.swp  .plot-single-system-poster.py.swo  .plot-single-system-poster.py.swp  .plot-single-system.py.swp  .table-L1-component.py.swp  .table-cache-comparison.py.swo  .table-instr-comparison.py.swp  .table-instr-component.py.swo  .table-instr-component.py.swp  .table-mem-comparison.py.swp  .table-poster-comparison.py.swo  .table-poster-comparison.py.swp  Extrapolation.ipynb  atomic-block-size.py  create_config.py  extrapolation.py  plot-all-systems.py  plot-extrapolation.py  plot-roofline.py  plot-single-system-multi-bench.py  plot-single-system-poster.py  plot-single-system.py  table-L1-component.py  table-cache-comparison-backup.py  table-cache-comparison.py  table-cacheL3-comparison.py  table-instr-comparison.py  table-instr-component.py  table-mem-comparison.py  table-poster-comparison.py
(+87544 files in other folders)
